# learn-opengl

./: CG-light.xmind  CG-mainPath.xmind  README.md
code1/: CMakeLists.txt
code1/src/: main.cpp
code2/: CMakeLists.txt
code2/src/: camera.h  fragment_shader.fs  main.cpp  shader_s.h  test7_camera.cpp
code3/: CMakeLists.txt
code3/include/glad/: glad.h
code3/resource/tt/: mybox.mtl
code3/src/: glad.c  main.cpp  mesh.h  model.h
